# axmldec

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  axmldec_config.hpp  axmldec_config.hpp.in  main.cpp
doc/: overview.dot
doxygen/: Doxyfile.in
include/jitana/util/: axml_parser.hpp  stream_reader.hpp
lib/jitana/util/: axml_parser.cpp
